# OpenCloudSkillHub

./: .gitignore  .mcp.json
deploy/: README.md  ocsh.env.example  opencloudskillhub.service
docs/: architecture-v0.3-domains-and-handoff.md  architecture.md  domain-registration-contract.md  m7-real-agent-test-checklist.md  skill-package-contract.md
docs/decisions/: ADR-001-execution-model-a.md  ADR-002-default-ocr-engine-rapidocr.md  ADR-003-platform-package-decoupling.md  ADR-004-course-contribution-is-supply-chain.md  ADR-005-remote-deployment-mode.md  README.md
domains/: recruitos.yaml
examples/: README.md  e2e_ocr_learning.py  openclaw-minimal.md  openclaw_connect.py  transcript.md
mcp-server/: README.md  pyproject.toml
mcp-server/src/opencloudskillhub/: __init__.py  exec_support.py  feedback.py  paths.py  registry.py  serve_http.py  server.py  validate.py
mcp-server/tests/: test_domains.py  test_exec_support.py  test_feedback.py  test_remote.py  test_validate.py
mcp-server/tests/fixtures/bad-skill/: skill.yaml
mcp-server/tests/fixtures/bad-skill/guide/: guide.md
mcp-server/tests/fixtures/domains/: bad-domain.yaml  good-domain.yaml
mcp-server/tests/fixtures/good-skill/: skill.yaml
mcp-server/tests/fixtures/good-skill/assets/: verify.py
mcp-server/tests/fixtures/good-skill/guide/: guide.md  safety.md
registry/: domain.schema.json  skill.schema.json  trust.yaml
scripts/: http_smoke.py  mcp_smoke.py  selftest.py
skills/ocr/: skill.yaml
skills/ocr/assets/: diagnostics.yaml  (+2 more)
system/: changelog.md  curriculum.md  guide.md  handoff-model.md
(+8 files in other folders)
